@@ -30,6 +30,7 @@ public:
 	AnalyseAudioJob (boost::shared_ptr<const Film>, boost::shared_ptr<AudioContent>);
 
 	std::string name () const;
+	std::string json_name () const;
 	void run ();
 
 private:
