@@ -30,6 +30,7 @@ public:
 	~ExamineContentJob ();
 
 	std::string name () const;
+	std::string json_name () const;
 	void run ();
 
 private:
