@@ -111,6 +111,12 @@ SCPDCPJob::name () const
 	return _("Copy DCP to TMS");
 }
 
+string
+SCPDCPJob::json_name () const
+{
+	return N_("scp_dcp");
+}
+
 void
 SCPDCPJob::run ()
 {
