@@ -29,6 +29,7 @@ public:
 	SCPDCPJob (boost::shared_ptr<const Film>);
 
 	std::string name () const;
+	std::string json_name () const;
 	void run ();
 	std::string status () const;
 
