@@ -40,6 +40,7 @@ sources = """
           job.cc
           job_manager.cc
           kdm.cc
+          json_server.cc
           log.cc
           md5_digester.cc
           piece.cc
