@@ -1,3 +1,7 @@
+2015-02-16  c.hetherington  <cth@carlh.net>
+
+	* Resurrect JSON server code.
+
 2015-02-14  Carl Hetherington  <cth@carlh.net>
 
 	* Remove ^H shortcut to Hints dialog as it clashes
